@@ -353,6 +353,11 @@ configs/z8f64200100kit
     development kit, Z8F6423 part, and the Zilog ZDS-II Windows command line
     tools.  The development environment is Cygwin under WinXP.
 
+configs/ez80f0910200kitg
+    ez80Acclaim! Microcontroller.  This port use the Zilog ez80f0910200kitg
+    development kit, eZ80F091 part, and the Zilog ZDS-II Windows command line
+    tools.  The development environment is Cygwin under WinXP.
+
 configs/z80sim
     z80 Microcontroller.  This port uses a Z80 instruction set simulator.
     That simulator can be found in the NuttX CVS at
